# quicktime_video_hack

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  go.mod  go.sum  main  main.go  qvh  test.entitlements
.circleci/: config.yml
.github/workflows/: build-activator.yml  test.yml
doc/: technical_documentation.md
docker/: Dockerfile  Dockerfile.debian  README.md
java-x264-decoder/: pom.xml
log/: core_media_research.md  dtrace-probes.md  findPPS.md  ibridgecontrol.entitlements  linux-workarounds.md  need-analysis  usb-reverse  usb-reverse.md
log/reply/: afmt-request  analysis.md  clok-request  cvrp-request  cwpa-reply1  cwpa-request1  cwpa-request2  reply2
screencapture/: activator.go  discovery.go  discovery_test.go  frameextractor.go  frameextractor_test.go  interfaces.go  messageprocessor.go  messageprocessor_test.go  usbadapter-new.go  usbadapter.go  utils.go  valeriainterface.go
screencapture/common/: nsnumber.go  nsnumber_test.go  parserutil.go
screencapture/coremedia/: audio_stream_basic_description.go  audio_stream_basic_description_test.go  avfilewriter.go  avfilewriter_test.go  (+19 more)
usb/: constants.go  discovery.go  frameextractor.go  frameextractor_test.go  interfaces.go  messageprocessor.go  usbadapter.go  usbvideostream.go
windows_activator/: CMakeLists.txt  main.c
windows_activator/libusb-win32-bin-1.2.6.0/include/: lusb0_usb.h
windows_activator/libusb-win32-bin-1.2.6.0/lib/bcc/: libusb.lib
windows_activator/libusb-win32-bin-1.2.6.0/lib/dynamic/: libusb_dyn.c
windows_activator/libusb-win32-bin-1.2.6.0/lib/msvc_i64/: libusb.lib
(+165 files in other folders)
